--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 body {background-color:black;font-family: Arial; color:white}
 h1{color:grey;font-family: verdana;}
 
+.highlight{
+    background-color: yellow;
+}
+
 .maindiv{
     background-color: white;
     color: black;
     width: 300px;
     padding: 20px;
     border-radius: 25px;
-    box-align: center;
+    margin: 0 auto;
 }
 
 
